--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-rope<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,3 +11,4 @@ rope<!DOCTYPE html>
   </body>
 
 </html>
+
